Update Company Details

--- a/boss/index.html
+++ b/boss/index.html
@@ -231,8 +231,6 @@
 </section>
 <!-- ./process -->
 
-
-
 <!-- works -->
 <section id="works" class="section">
     <div class="container">
@@ -248,7 +246,7 @@
                 <div class="pic">
                     <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work1.jpg" class="img-responsive" alt="">
                     <div class="overlay">
-                        <a href="img/demo/big_work.jpg" class="link group1"> <i class="fa fa-search"></i></a>
+                        <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
                         <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
                     </div>
                 </div>
@@ -257,7 +255,7 @@
                 <div class="pic">
                     <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work2.jpg" class="img-responsive" alt="">
                     <div class="overlay">
-                        <a href="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/big_work.jpg" class="link group1"> <i class="fa fa-search"></i></a>
+                        <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
                         <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
                     </div>
                 </div>
@@ -266,7 +264,7 @@
                 <div class="pic">
                     <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work3.jpg" class="img-responsive" alt="">
                     <div class="overlay">
-                        <a href="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/big_work.jpg" class="link group1"> <i class="fa fa-search"></i></a>
+                        <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
                         <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
                     </div>
                 </div>
@@ -277,7 +275,7 @@
                 <div class="pic">
                     <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work4.jpg" class="img-responsive" alt="">
                     <div class="overlay">
-                        <a href="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/big_work.jpg" class="link group1"> <i class="fa fa-search"></i></a>
+                        <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
                         <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
                     </div>
                 </div>
@@ -286,7 +284,7 @@
                 <div class="pic">
                     <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work5.jpg" class="img-responsive" alt="">
                     <div class="overlay">
-                        <a href="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/big_work.jpg" class="link group1"> <i class="fa fa-search"></i></a>
+                        <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
                         <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
                     </div>
                 </div>
@@ -295,7 +293,7 @@
                 <div class="pic">
                     <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work1.jpg" class="img-responsive" alt="">
                     <div class="overlay">
-                        <a href="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/big_work.jpg" class="link group1"> <i class="fa fa-search"></i></a>
+                        <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
                         <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
                     </div>
                 </div>
@@ -386,7 +384,7 @@
         <div class="section-header">
             <h1>about us</h1>
             <div class="divider-light"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
+            <p>Fluke Inc. is an accredited, independent testing laboratory and calibration company located in Mandaluyong</p>
         </div>
 
         <div class="row">
@@ -394,10 +392,12 @@
 
                 <!-- video-wrapper -->
                 <div class="video-wrapper">
-                    <iframe width="560" height="280" src="//www.youtube.com/embed/mzPxo7Y6JyA" style="border:0;" allowfullscreen></iframe>
+                    <iframe width="560" height="280" src="https://www.youtube.com/embed/9QVz-aRrbgs" style="border:0;" allowfullscreen></iframe>
                 </div>
                 <!-- ./video-wrapper -->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet. Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet. Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet. </p>
+                <p>
+                    The Fluke Calibration 2271A Industrial Pressure Calibrator provides a complete, automated solution for calibrating a wide variety of pressure gauges and sensors. This video shows how easy it is to use the 2271A.
+                </p>
 
             </div>
 
@@ -407,37 +407,42 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="collapsed">
-                                Fits on Any Niche
+                                When Time is of the Essence
                             </a>
                         </div>
                         <div id="collapseOne" class="panel-collapse collapse in">
                             <div class="panel-body">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel ultrices ligula. Curabitur consectetur lobortis velit, eget semper quam fringilla ut. Vestibulum tristique vestibulum mauris eu mattis.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel ultrices ligula. Curabitur consectetur lobortis velit, eget semper quam fringilla ut. Vestibulum tristique vestibulum mauris eu mattis.</p>
+                                <p>Your time is money, so save time by working with a single testing laboratory and calibration company for all your needs!
+                                   Fluke eliminates costly bottlenecks and delays by consolidating all material testing and calibration services </p>
+                                <p>When your order needs to be turned around in days – not weeks – look to Laboratory Testing for quick service and reliable results.
+                                   Your orders will be completed in the most timely manner, without compromising quality.</p>
                             </div>
                         </div>
                     </div>
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed">
-                                Endless Posibility
+                               Experts Working For You
                             </a>
                         </div>
                         <div id="collapseTwo" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel ultrices ligula. Curabitur consectetur lobortis velit, eget semper quam fringilla ut. Vestibulum tristique vestibulum mauris eu mattis.
+                                <p> Receive the most accurate assessments of strength, durability, reliability, longevity, capability and effectiveness from our employees and impressive array of computerized equipment. </p>
+                                <p> </p>
                             </div>
                         </div>
                     </div>
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="">
-                                Focus on functionality
+                                Unparalleled Convenience
                             </a>
                         </div>
                         <div id="collapseThree" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel ultrices ligula. Curabitur consectetur lobortis velit, eget semper quam fringilla ut. Vestibulum tristique vestibulum mauris eu mattis.
+                                <p> As one of the few “one-stop” calibration, nondestructive testing and material testing labs, our clients rest assured knowing that
+                                    Fluke Inc. can also quickly and conveniently provide test specimens, failure analysis, new measuring instruments,
+                                    instrument repairs and replacement parts, if the need arises. </p>
                             </div>
                         </div>
                     </div>
@@ -806,7 +811,7 @@
         <div class="section-header">
             <h1>contact us</h1>
             <div class="divider-light"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
+            <p>For quick service, complete this form and we will get in touch with you shortly.</p>
         </div>
 
 
@@ -818,21 +823,21 @@
                         <div class="contact-box">
                             <i class="fa fa-phone"></i>
                             <h4>call us</h4>
-                            <p>+1 888 123 456 12 <br> From 9am to 6pm</p>
+                            <p>+639 0522 16377 <br> From 9am to 6pm</p>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-4">
                         <div class="contact-box">
                             <i class="fa fa-envelope"></i>
                             <h4>email</h4>
-                            <p>support@bootstrapwizard.info <br> Or Fill Form Below</p>
+                            <p>tony@gmail.com <br> Or Fill Form Below</p>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-4">
                         <div class="contact-box">
                             <i class="fa fa-map-marker"></i>
                             <h4>address</h4>
-                            <p>#123 Silicon Valley <br> Califonia USA</p>
+                            <p>Mandaluyong City<br> Metro Manila 1500  </p>
                         </div>
                     </div>
                 </div>
