--- a/boss/index.html
+++ b/boss/index.html
@@ -912,7 +912,7 @@
 
         <!-- copyrights -->
         <div class="copyrights">
-            Copyright &copy; 2014. Made By BootstrapWizard
+            Copyright &copy; 2014. Developed by Zai
         </div>
         <!-- end copyrights -->
 
