--- a/boss/index.html
+++ b/boss/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -187,9 +186,9 @@
         <div class="row">
             <div class="col-md-7 col-sm-7">
                 <div id="slider" class="owl-carousel owl-theme">
-                    <div class="item"><img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/showcase1.png" alt=""></div>
-                    <div class="item"><img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/showcase2.png" alt=""></div>
-                    <div class="item"><img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/showcase3.png" alt=""></div>
+                    <div class="item"><img src="img/demo/showcase1.png" alt=""></div>
+                    <div class="item"><img src="img/demo/showcase2.png" alt=""></div>
+                    <div class="item"><img src="img/demo/showcase3.png" alt=""></div>
                 </div>
             </div>
             <div class="col-md-5 col-sm-5">
@@ -244,7 +243,7 @@
         <div class="row wow fadeInUp showdelay2">
             <div class="col-md-4 col-sm-4">
                 <div class="pic">
-                    <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work1.jpg" class="img-responsive" alt="">
+                    <img src="img/demo/work-1.jpg" class="img-responsive" alt="" style="height:210px !important;">
                     <div class="overlay">
                         <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
                         <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
@@ -253,7 +252,7 @@
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="pic">
-                    <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work2.jpg" class="img-responsive" alt="">
+                    <img src="img/demo/work-2.jpg" class="img-responsive" alt="" style="height:210px !important;">
                     <div class="overlay">
                         <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
                         <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
@@ -262,36 +261,7 @@
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="pic">
-                    <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work3.jpg" class="img-responsive" alt="">
-                    <div class="overlay">
-                        <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
-                        <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row wow fadeInUp showdelay2">
-            <div class="col-md-4 col-sm-4">
-                <div class="pic">
-                    <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work4.jpg" class="img-responsive" alt="">
-                    <div class="overlay">
-                        <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
-                        <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-4">
-                <div class="pic">
-                    <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work5.jpg" class="img-responsive" alt="">
-                    <div class="overlay">
-                        <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
-                        <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-4">
-                <div class="pic">
-                    <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work1.jpg" class="img-responsive" alt="">
+                    <img src="img/demo/work-3.jpg" class="img-responsive" alt="" style="height:210px !important;">
                     <div class="overlay">
                         <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
                         <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
@@ -302,27 +272,56 @@
         <div class="row wow fadeInUp showdelay2">
             <div class="col-md-4 col-sm-4">
                 <div class="pic">
-                    <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work2.jpg" class="img-responsive" alt="">
+                    <img src="img/demo/work-4.jpg" class="img-responsive" alt="" style="height:210px !important;">
                     <div class="overlay">
-                        <a href="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/big_work.jpg" class="link group1"> <i class="fa fa-search"></i></a>
+                        <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
                         <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="pic">
-                    <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work3.jpg" class="img-responsive" alt="">
+                    <img src="img/demo/work-5.jpg" class="img-responsive" alt="" style="height:210px !important;">
                     <div class="overlay">
-                        <a href="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/big_work.jpg" class="link group1"> <i class="fa fa-search"></i></a>
+                        <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
                         <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="pic">
-                    <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/thumb_work4.jpg" class="img-responsive" alt="">
+                    <img src="img/demo/work-6.jpg" class="img-responsive" alt="" style="height:210px !important;">
                     <div class="overlay">
-                        <a href="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/big_work.jpg" class="link group1"> <i class="fa fa-search"></i></a>
+                        <a href="img/fluke/background.jpg" class="link group1"> <i class="fa fa-search"></i></a>
+                        <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row wow fadeInUp showdelay2">
+            <div class="col-md-4 col-sm-4">
+                <div class="pic">
+                    <img src="img/demo/work-7.jpg" class="img-responsive" alt="" style="height:210px !important;">
+                    <div class="overlay">
+                        <a href="img/demo/big_work.jpg" class="link group1"> <i class="fa fa-search"></i></a>
+                        <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="pic">
+                    <img src="img/demo/work-8.jpg" class="img-responsive" alt="" style="height:210px !important;">
+                    <div class="overlay">
+                        <a href="img/demo/big_work.jpg" class="link group1"> <i class="fa fa-search"></i></a>
+                        <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="pic">
+                    <img src="img/demo/work-9.jpg" class="img-responsive" alt="" style="height:210px !important;">
+                    <div class="overlay">
+                        <a href="img/demo/big_work.jpg" class="link group1"> <i class="fa fa-search"></i></a>
                         <a href="single-work.html" class="zoom"> <i class="fa fa-link"></i></a>
                     </div>
                 </div>
@@ -340,34 +339,34 @@
     <div class="container">
         <div id="testimonial-list" class="owl-carousel  wow fadeInUp showdelay2">
             <div class="item">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
-                <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/avatar1.jpg" alt="..." class="img-circle">
-                <h5 class="author">John Doe</h5>
-                <div class="position">Company CEO</div>
+                <p>“I have really appreciated you getting back to me so quickly on things. I would highly recommend you in the future!“</p>
+                <img src="img/demo/avatar1.jpg" alt="..." class="img-circle">
+                <h5 class="author">Marie Sheenan</h5>
+                <div class="position">Validation Engineer</div>
             </div>
             <div class="item">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
-                <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/avatar2.jpg" alt="..." class="img-circle">
-                <h5 class="author">Robert Doe</h5>
-                <div class="position">SEO Specialist</div>
+                <p>“Sometimes the best thing to say is thank you. With that being said, Fluke has helped us tremendously here so thank you, thank you, thank you.”</p>
+                <img src="img/demo/avatar2.jpg" alt="..." class="img-circle">
+                <h5 class="author">Tommy Craig</h5>
+                <div class="position">Quality Manager</div>
             </div>
             <div class="item">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
-                <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/avatar3.jpg" alt="..." class="img-circle">
-                <h5 class="author">Jason Doe</h5>
-                <div class="position">Interior Designer</div>
+                <p>“Thanks for the quick response…great job, Laboratory Testing Inc., truly a good showing on a job well done by everyone. Pleasure doing business with you. I look forward to the next time!”</p>
+                <img src="img/demo/avatar3.jpg" alt="..." class="img-circle">
+                <h5 class="author">Ron Hilterman</h5>
+                <div class="position">Westinghouse Interface</div>
             </div>
             <div class="item">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
-                <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/avatar4.jpg" alt="..." class="img-circle">
-                <h5 class="author">Ammie Doe</h5>
-                <div class="position">Programmer</div>
+                <p>“We are most impressed with the level of service we receive from Fluke. The helpfulness, courtesy and professionalism of all staff with whom I’ve dealt have been outstanding.”</p>
+                <img src="img/demo/avatar4.jpg" alt="..." class="img-circle">
+                <h5 class="author">Alastair Turner</h5>
+                <div class="position">General Manager</div>
             </div>
             <div class="item">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
-                <img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/avatar1.jpg" alt="..." class="img-circle">
-                <h5 class="author">Steven Doe</h5>
-                <div class="position">Flash Developer</div>
+                <p>I wanted to write and applaud LTI for assisting us in calibrating some new equipment, while re-calibrating equipment that was moved.</p>
+                <img src="img/demo/avatar1.jpg" alt="..." class="img-circle">
+                <h5 class="author">Chris Boytim</h5>
+                <div class="position">Quality Manager</div>
             </div>
 
         </div>
@@ -551,35 +550,6 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
                 </div>
             </div>
-
-            <div class="team-box item">
-                <img class="img-responsive" src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/team2.jpg" alt="">
-                <div class="team-social">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-                <div class="team-info">
-                    <h5>Jesica Doe</h5>
-                    <span class="position">Programmer</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
-                </div>
-            </div>
-
-            <div class="team-box item">
-                <img class="img-responsive" src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/team3.jpg" alt="">
-                <div class="team-social">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-                <div class="team-info">
-                    <h5>Sheena Doe</h5>
-                    <span class="position">Flash Developer</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
-                </div>
-            </div>
-
         </div>
         <!-- ./member carousel -->
 
@@ -624,12 +594,12 @@
                 <div class="clients  wow fadeInUp showdelay2">
                     <h3>clients</h3>
                     <ul class="client-list">
-                        <li><img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/client7.png" alt=""> </li>
-                        <li><img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/client2.png" alt=""> </li>
-                        <li><img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/client3.png" alt=""> </li>
-                        <li><img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/client4.png" alt=""> </li>
-                        <li><img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/client5.png" alt=""> </li>
-                        <li><img src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/client6.png" alt=""> </li>
+                        <li><img src="img/demo/client7.png" alt=""> </li>
+                        <li><img src="img/demo/client2.png" alt=""> </li>
+                        <li><img src="img/demo/client3.png" alt=""> </li>
+                        <li><img src="img/demo/client4.png" alt=""> </li>
+                        <li><img src="img/demo/client5.png" alt=""> </li>
+                        <li><img src="img/demo/client6.png" alt=""> </li>
                     </ul>
                 </div>
             </div>
@@ -743,7 +713,7 @@
         <div id="blog-list" class="owl-carousel   wow fadeInUp showdelay2">
 
             <div class="blog-box item">
-                <img class="img-responsive" src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/blog1.jpg" alt="">
+                <img class="img-responsive" src="img/demo/blog1.jpg" alt="">
                 <div class="blog-info">
                     <h5>modern web design tutorials</h5>
                     <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
@@ -754,7 +724,7 @@
             </div>
 
             <div class="blog-box item">
-                <img class="img-responsive" src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/blog2.jpg" alt="">
+                <img class="img-responsive" src="img/demo/blog2.jpg" alt="">
                 <div class="blog-info">
                     <h5>On-site Calibration</h5>
                     <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
@@ -765,7 +735,7 @@
             </div>
 
             <div class="blog-box item">
-                <img class="img-responsive" src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/blog3.jpg" alt="">
+                <img class="img-responsive" src="img/demo/blog3.jpg" alt="">
                 <div class="blog-info">
                     <h5>Advance wen design</h5>
                     <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
@@ -776,7 +746,7 @@
             </div>
 
             <div class="blog-box item">
-                <img class="img-responsive" src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/blog4.jpg" alt="">
+                <img class="img-responsive" src="img/demo/blog4.jpg" alt="">
                 <div class="blog-info">
                     <h5>modern web design tutorials</h5>
                     <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
@@ -787,7 +757,7 @@
             </div>
 
             <div class="blog-box item">
-                <img class="img-responsive" src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/blog5.jpg" alt="">
+                <img class="img-responsive" src="img/demo/blog5.jpg" alt="">
                 <div class="blog-info">
                     <h5>modern web design tutorials</h5>
                     <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
@@ -912,7 +882,7 @@
 
         <!-- copyrights -->
         <div class="copyrights">
-            Copyright &copy; 2014. Developed by Zai
+            Copyright &copy; 2017. Developed by Zai
         </div>
         <!-- end copyrights -->
 
