--- a/boss/index.html
+++ b/boss/index.html
@@ -714,53 +714,61 @@
 
             <div class="blog-box item">
                 <img class="img-responsive" src="img/demo/blog1.jpg" alt="">
-                <div class="blog-info">
-                    <h5>modern web design tutorials</h5>
-                    <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
-                    <span class="comment"><i class="fa fa-comments"></i>15 comments</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
-                    <a href="#">Read More...</a>
-                </div>
-            </div>
-
-            <div class="blog-box item">
-                <img class="img-responsive" src="img/demo/blog2.jpg" alt="">
-                <div class="blog-info">
-                    <h5>On-site Calibration</h5>
-                    <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
-                    <span class="comment"><i class="fa fa-comments"></i>15 comments</span>
-                    <p>On-site calibration is a growing business for Fluke, as evidenced by the list of instruments recently added to the Lab’s calibration capabilities</p>
+                <div class="blog-info" style="height: 260px;">
+                    <h5>Expedited Calibration Services</h5>
+                    <span class="date"><i class="fa fa-clock-o"></i>15 January 2017</span>
+                    <span class="comment"><i class="fa fa-comments"></i>18 comments</span>
+                    <p>
+                        In the calibration business, turnaround is king. We know not having access to your equipment for long periods of time is simply unacceptable.
+                    </p>
                     <a href="#">Read More...</a>
                 </div>
             </div>
 
             <div class="blog-box item">
                 <img class="img-responsive" src="img/demo/blog3.jpg" alt="">
-                <div class="blog-info">
-                    <h5>Advance wen design</h5>
-                    <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
-                    <span class="comment"><i class="fa fa-comments"></i>15 comments</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
+                <div class="blog-info" style="height: 260px;">
+                    <h5>Wide-Ranging Capabilities</h5>
+                    <span class="date"><i class="fa fa-clock-o"></i>15 April 2016</span>
+                    <span class="comment"><i class="fa fa-comments"></i>56 comments</span>
+                    <p>
+                        Using the resources of our fully equipped laboratory, our trained technicians can precisely measure flow, force, torque, weight, pressure and temperature.
+                    </p>
                     <a href="#">Read More...</a>
                 </div>
             </div>
 
             <div class="blog-box item">
                 <img class="img-responsive" src="img/demo/blog4.jpg" alt="">
-                <div class="blog-info">
-                    <h5>modern web design tutorials</h5>
-                    <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
+                <div class="blog-info" style="height: 260px;"> 
+                    <h5>Convenience & Confidence</h5>
+                    <span class="date"><i class="fa fa-clock-o"></i>10 October 2016</span>
                     <span class="comment"><i class="fa fa-comments"></i>15 comments</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
+                    <p>
+                        At Fluke, we offer the ultimate in convenience so you can concentrate on your many other responsibilities. 
+                    </p>
+                    <a href="#">Read More...</a>
+                </div>
+            </div>
+
+            <div class="blog-box item">
+                <img class="img-responsive" src="img/demo/blog2.jpg" alt="">
+                <div class="blog-info" style="height: 260px;">
+                    <h5>On-site Calibration</h5>
+                    <span class="date"><i class="fa fa-clock-o"></i>03 September 2016</span>
+                    <span class="comment"><i class="fa fa-comments"></i>3 comments</span>
+                    <p>
+                        We offer high quality calibration services at your facility. Whether a single event or if you in the market.
+                    </p>
                     <a href="#">Read More...</a>
                 </div>
             </div>
 
             <div class="blog-box item">
                 <img class="img-responsive" src="img/demo/blog5.jpg" alt="">
-                <div class="blog-info">
+                <div class="blog-info" style="height: 260px;">
                     <h5>modern web design tutorials</h5>
-                    <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
+                    <span class="date"><i class="fa fa-clock-o"></i>02 July 2014</span>
                     <span class="comment"><i class="fa fa-comments"></i>15 comments</span>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
                     <a href="#">Read More...</a>
