--- a/boss/index.html
+++ b/boss/index.html
@@ -351,7 +351,7 @@
                 <div class="position">Quality Manager</div>
             </div>
             <div class="item">
-                <p>“Thanks for the quick response…great job, Laboratory Testing Inc., truly a good showing on a job well done by everyone. Pleasure doing business with you. I look forward to the next time!”</p>
+                <p>“Thanks for the quick response…great job, Fluke Inc., truly a good showing on a job well done by everyone. Pleasure doing business with you. I look forward to the next time!”</p>
                 <img src="img/demo/avatar3.jpg" alt="..." class="img-circle">
                 <h5 class="author">Ron Hilterman</h5>
                 <div class="position">Westinghouse Interface</div>
@@ -363,7 +363,7 @@
                 <div class="position">General Manager</div>
             </div>
             <div class="item">
-                <p>I wanted to write and applaud LTI for assisting us in calibrating some new equipment, while re-calibrating equipment that was moved.</p>
+                <p>I wanted to write and applaud Fluke for assisting us in calibrating some new equipment, while re-calibrating equipment that was moved.</p>
                 <img src="img/demo/avatar1.jpg" alt="..." class="img-circle">
                 <h5 class="author">Chris Boytim</h5>
                 <div class="position">Quality Manager</div>
@@ -706,7 +706,7 @@
         <div class="section-header">
             <h1>blog</h1>
             <div class="divider-light"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
+            <p>At the end of 2015 Fluke listened to customer feedback regarding service.</p>
         </div>
 
         <!-- blog-list -->
